unpackaged/main/default/objects/whistic_profile__Profile_Share__c/whistic_profile__Profile_Share__c.object-meta.xml
<CustomObject>
    <description>This object stores the metadata that represents every time a security profile is shared and links to who it was shared with</description>
    <label>Profile Share</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Profile Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Shares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>