unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>