unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__NDA_Status__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__NDA_Status__c</fullName>
    <defaultValue>&#39;Pending&#39;</defaultValue>
    <label>NDA Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>