unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Profile Shares</relationshipLabel>
    <relationshipName>Profile_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>