unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Security_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Security_Profile_Id__c</fullName>
    <formula>whistic_profile__Security_Profile__r.whistic_profile__Whistic_Profile_Id__c</formula>
    <label>Security Profile Id</label>
    <type>Text</type>
</CustomField>