unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Security_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Security_Profile_Name__c</fullName>
    <formula>whistic_profile__Security_Profile__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Profile Name</label>
    <type>Text</type>
</CustomField>