unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Sender_Email__c</fullName>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>