unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Sender_First_Name__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Sender_First_Name__c</fullName>
    <label>Sender First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>