unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Share_Date__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Share_Date__c</fullName>
    <label>Share Date</label>
    <type>DateTime</type>
</CustomField>