unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Share_Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Share_Request_JSON__c</fullName>
    <label>Share Request JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>