unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Share_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Share_Response_Code__c</fullName>
    <description>Stores the response code from whistic api for the original share sent</description>
    <label>Share Response Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>