unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Share_Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Share_Response_JSON__c</fullName>
    <description>Stores the json returned by the whistic api server from the initial share</description>
    <label>Share Response JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>