unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Share_Response_Text__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Share_Response_Text__c</fullName>
    <description>Stores the response information returned by the whistic api server for the original share</description>
    <label>Share Response Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>