unpackaged/main/default/objects/whistic_profile__Profile_Share__c/fields/whistic_profile__Status_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Status_Last_Updated__c</fullName>
    <label>Status Last Updated</label>
    <type>DateTime</type>
</CustomField>